--- a/projects/rilke-ui/src/lib/components/menu/menu.component.html
+++ b/projects/rilke-ui/src/lib/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <ng-content></ng-content>
-<span #menuTrigger [matMenuTriggerFor]="menu"></span>
+<span class="menu-trigger" #menuTrigger [matMenuTriggerFor]="menu"></span>
 <mat-menu
 	#menu="matMenu"
 	[class]="menuClass"
