--- a/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
+++ b/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
@@ -27,7 +27,7 @@ ril-text-area {
 			height: 100%;
 			margin: 0;
 			outline: none;
-			padding: $p-md $p-md;
+			padding: $p-sm $p-md;
 			transition:
 				background 0.2s ease-in-out,
 				border 0.2s ease-in-out,
