--- a/projects/rilke-ui/src/style/_typography.scss
+++ b/projects/rilke-ui/src/style/_typography.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 
-$f-family: 'Roboto', "Helvetica Neue", sans-serif;
+$f-family: 'Trenda Regular',"Helvetica Neue","Noto Sans",sans-serif;
 $base-size: 1rem;
 $base-weight: 400;
 
