--- a/projects/rilke-ui/src/style/styles.scss
+++ b/projects/rilke-ui/src/style/styles.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@import "../font/trenda/style";
 @use "node_modules/@angular/material" as mat;
 @import "./palette";
 @import "./structure";
@@ -32,6 +33,15 @@ $rilke-ui-theme: mat.define-light-theme(
 @include cdk-overlay();
 
 @import "./components";
+
+html {
+	display: block;
+	height: 100%;
+	font-family: $f-family;
+	color: main-contrast(800);
+	font-weight: $f-weight-md;
+	line-height: $f-size-md;
+}
 
 body {
 	height: 100%;
