--- a/projects/rilke-ui/src/assets/style/components.scss
+++ b/projects/rilke-ui/src/assets/style/components.scss
@@ -1,68 +1,3 @@
-ril-alert {
-	.toast {
-		position: relative;
-		display: flex;
-		flex-wrap: nowrap;
-		justify-content: space-around;
-		border-radius: $r-md;
-		align-items: center;
-		padding: 10px 15px;
-		min-height: 48px;
-
-		p {
-			color: main-contrast(800);
-			font-size: 1rem;
-			line-height: 1.6rem;
-			margin-right: 0.6rem;
-		}
-
-		&.default {
-			background: main-palette(900);
-
-			button {
-				background-color: main-palette(700);
-			}
-		}
-
-		&.success {
-			background: $success-color;
-
-			button {
-				background-color: $success-hover;
-			}
-		}
-
-		&.info {
-			background: $info-color;
-
-			button {
-				background-color: $info-hover;
-			}
-		}
-
-		&.warning {
-			background: $warning-color;
-
-			button {
-				background-color: $warning-hover;
-			}
-		}
-
-		&.error {
-			background: $error-color;
-
-			button {
-				background-color: $error-hover;
-			}
-		}
-	}
-}
-
-snack-bar-container {
-	background: transparent !important;
-	padding: 0 !important;
-	overflow: hidden !important;
-}
 ril-auto-complete {
 	border-radius: $r-md;
 	display: block;
@@ -132,6 +67,241 @@ ril-auto-complete {
 			}
 		}
 	}
+}
+ril-avatar {
+	align-items: center;
+	background: material-palette(grey, 400);
+	border-radius: 50%;
+	display: flex;
+	font-weight: 600;
+	justify-content: center;
+	line-height: 1;
+	position: relative;
+	text-transform: uppercase;
+	flex-shrink: 0;
+	cursor: default;
+	user-select: none; /* supported by Chrome and Opera */
+
+	img {
+		max-height: 100%;
+		max-width: 100%;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+		transition: 0.5s ease;
+		border-radius: inherit;
+	}
+
+	.initial {
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		align-items: center;
+		transition: 0.5s ease;
+		width: 100%;
+		height: 100%;
+		background: material-palette(grey, 400);
+		color: material-palette(grey, 700);
+		border-radius: inherit;
+	}
+
+	.icon {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 0;
+		color: material-palette(grey, 700);
+	}
+
+	&.selectable {
+		cursor: pointer;
+
+		.select-image {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			color: material-palette(grey, 700);
+			z-index: 3;
+			opacity: 100%;
+			transition: 0.5s ease;
+			font-size: 75%;
+		}
+
+		&:hover {
+			.select-image {
+				opacity: 100%;
+			}
+
+			img,
+			.initial {
+				opacity: 30%;
+			}
+		}
+	}
+}
+ril-badge {
+	align-items: center;
+	justify-content: center;
+	border-radius: $r-md;
+	display: inline-flex;
+	font-weight: $f-weight-md;
+
+	// Sizes
+	&.badge-xs {
+		font-size: $f-size-xs;
+		line-height: $f-line-xs;
+		border-radius: $r-xs;
+		padding: math.div($p-xs, 2) $p-xs;
+	}
+
+	&.badge-sm {
+		font-size: $f-size-sm;
+		line-height: $f-line-sm;
+		border-radius: $r-sm;
+		padding: math.div($p-sm, 2) $p-sm;
+	}
+
+	&.badge-md {
+		font-size: $f-size-md;
+		line-height: $f-line-md;
+		border-radius: $r-md;
+		padding: math.div($p-md, 2) $p-md;
+	}
+
+	&.badge-lg {
+		font-size: $f-size-lg;
+		line-height: $f-line-lg;
+		border-radius: $r-lg;
+		padding: math.div($p-lg, 2) $p-lg;
+	}
+
+	&.badge-xl {
+		font-size: $f-size-xl;
+		line-height: $f-line-xl;
+		border-radius: $r-xl;
+		padding: math.div($p-xl, 2) $p-xl;
+	}
+
+	&.extra-thin {
+		font-weight: $f-weight-xs;
+	}
+
+	&.thin {
+		font-weight: $f-weight-sm;
+	}
+
+	&.bold {
+		font-weight: $f-weight-lg;
+	}
+
+	&.heavy-bold {
+		font-weight: $f-weight-xl;
+	}
+
+	// Colors
+	&.badge-accent {
+		background: $accent-color;
+		color: $accent-text;
+	}
+
+	&.badge-success {
+		background: $success-color;
+		color: $success-text;
+	}
+
+	&.badge-warning {
+		background: $warning-color;
+		color: $warning-text;
+	}
+
+	&.badge-error {
+		background: $error-color;
+		color: $error-text;
+	}
+
+	&.badge-info {
+		background: $info-color;
+		color: $info-text;
+	}
+
+	&.badge-light {
+		background: main-contrast(900);
+		color: main-palette(900);
+	}
+
+	&.badge-dark {
+		background: main-palette(900);
+		color: main-contrast(900);
+	}
+}
+ril-alert {
+	.toast {
+		position: relative;
+		display: flex;
+		flex-wrap: nowrap;
+		justify-content: space-around;
+		border-radius: $r-md;
+		align-items: center;
+		padding: 10px 15px;
+		min-height: 48px;
+
+		p {
+			color: main-contrast(800);
+			font-size: 1rem;
+			line-height: 1.6rem;
+			margin-right: 0.6rem;
+		}
+
+		&.default {
+			background: main-palette(900);
+
+			button {
+				background-color: main-palette(700);
+			}
+		}
+
+		&.success {
+			background: $success-color;
+
+			button {
+				background-color: $success-hover;
+			}
+		}
+
+		&.info {
+			background: $info-color;
+
+			button {
+				background-color: $info-hover;
+			}
+		}
+
+		&.warning {
+			background: $warning-color;
+
+			button {
+				background-color: $warning-hover;
+			}
+		}
+
+		&.error {
+			background: $error-color;
+
+			button {
+				background-color: $error-hover;
+			}
+		}
+	}
+}
+
+snack-bar-container {
+	background: transparent !important;
+	padding: 0 !important;
+	overflow: hidden !important;
 }
 [ril-button] {
 	align-items: center;
@@ -578,176 +748,6 @@ ril-checkbox {
 						transform: scale(0.8);
 					}
 				}
-			}
-		}
-	}
-}
-ril-badge {
-	align-items: center;
-	justify-content: center;
-	border-radius: $r-md;
-	display: inline-flex;
-	font-weight: $f-weight-md;
-
-	// Sizes
-	&.badge-xs {
-		font-size: $f-size-xs;
-		line-height: $f-line-xs;
-		border-radius: $r-xs;
-		padding: math.div($p-xs, 2) $p-xs;
-	}
-
-	&.badge-sm {
-		font-size: $f-size-sm;
-		line-height: $f-line-sm;
-		border-radius: $r-sm;
-		padding: math.div($p-sm, 2) $p-sm;
-	}
-
-	&.badge-md {
-		font-size: $f-size-md;
-		line-height: $f-line-md;
-		border-radius: $r-md;
-		padding: math.div($p-md, 2) $p-md;
-	}
-
-	&.badge-lg {
-		font-size: $f-size-lg;
-		line-height: $f-line-lg;
-		border-radius: $r-lg;
-		padding: math.div($p-lg, 2) $p-lg;
-	}
-
-	&.badge-xl {
-		font-size: $f-size-xl;
-		line-height: $f-line-xl;
-		border-radius: $r-xl;
-		padding: math.div($p-xl, 2) $p-xl;
-	}
-
-	&.extra-thin {
-		font-weight: $f-weight-xs;
-	}
-
-	&.thin {
-		font-weight: $f-weight-sm;
-	}
-
-	&.bold {
-		font-weight: $f-weight-lg;
-	}
-
-	&.heavy-bold {
-		font-weight: $f-weight-xl;
-	}
-
-	// Colors
-	&.badge-accent {
-		background: $accent-color;
-		color: $accent-text;
-	}
-
-	&.badge-success {
-		background: $success-color;
-		color: $success-text;
-	}
-
-	&.badge-warning {
-		background: $warning-color;
-		color: $warning-text;
-	}
-
-	&.badge-error {
-		background: $error-color;
-		color: $error-text;
-	}
-
-	&.badge-info {
-		background: $info-color;
-		color: $info-text;
-	}
-
-	&.badge-light {
-		background: main-contrast(900);
-		color: main-palette(900);
-	}
-
-	&.badge-dark {
-		background: main-palette(900);
-		color: main-contrast(900);
-	}
-}
-ril-avatar {
-	align-items: center;
-	background: material-palette(grey, 400);
-	border-radius: 50%;
-	display: flex;
-	font-weight: 600;
-	justify-content: center;
-	line-height: 1;
-	position: relative;
-	text-transform: uppercase;
-	flex-shrink: 0;
-	cursor: default;
-	user-select: none; /* supported by Chrome and Opera */
-
-	img {
-		max-height: 100%;
-		max-width: 100%;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		object-position: center;
-		transition: 0.5s ease;
-		border-radius: inherit;
-	}
-
-	.initial {
-		display: flex;
-		align-content: center;
-		justify-content: center;
-		align-items: center;
-		transition: 0.5s ease;
-		width: 100%;
-		height: 100%;
-		background: material-palette(grey, 400);
-		color: material-palette(grey, 700);
-		border-radius: inherit;
-	}
-
-	.icon {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		padding: 0;
-		color: material-palette(grey, 700);
-	}
-
-	&.selectable {
-		cursor: pointer;
-
-		.select-image {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			color: material-palette(grey, 700);
-			z-index: 3;
-			opacity: 100%;
-			transition: 0.5s ease;
-			font-size: 75%;
-		}
-
-		&:hover {
-			.select-image {
-				opacity: 100%;
-			}
-
-			img,
-			.initial {
-				opacity: 30%;
 			}
 		}
 	}
@@ -1490,7 +1490,7 @@ ril-list {
 ril-menu {
 	position: relative;
 
-	span {
+	.menu-trigger {
 		opacity: 0%;
 		visibility: hidden;
 		position: absolute;
@@ -1894,9 +1894,8 @@ ril-tabs {
 			height: calc(100% - 0.6rem);
 			top: 0;
 			margin: 0.3rem;
-			max-width: calc(100% - 0.6rem);
+			max-width: calc(100% - 0.3rem);
 			transition: transform 0.3s ease;
-			padding: 0 0.3rem;
 
 			.box {
 				height: 100%;
@@ -1939,7 +1938,7 @@ ril-text-area {
 			height: 100%;
 			margin: 0;
 			outline: none;
-			padding: $p-md $p-md;
+			padding: $p-sm $p-md;
 			transition:
 				background 0.2s ease-in-out,
 				border 0.2s ease-in-out,
