--- a/projects/rilke-ui/src/assets/style/styles.scss
+++ b/projects/rilke-ui/src/assets/style/styles.scss
@@ -1,5 +1,6 @@
 @use "sass:math";
 @use "node_modules/@angular/material" as mat;
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "../font/trenda/style";
 @import "./palette";
 @import "./structure";
