List Component Updated

--- a/projects/rilke-ui/src/assets/style/_typography.scss
+++ b/projects/rilke-ui/src/assets/style/_typography.scss
@@ -35,42 +35,42 @@ textarea {
 
 h1 {
 	font-family: $f-family;
-	font-size: $f-line-md;
-	line-height: $f-line-md;
+	font-size: $f-size-xl;
+	line-height: $f-line-xl;
 	margin-bottom: 0;
 }
 
 h2 {
 	font-family: $f-family;
-	font-size: $f-line-md;
-	line-height: $f-line-md;
+	font-size: $f-size-xl;
+	line-height: $f-line-xl;
 	margin-bottom: 0;
 }
 
 h3 {
 	font-family: $f-family;
-	font-size: $f-line-md;
-	line-height: $f-line-md;
+	font-size: $f-size-lg;
+	line-height: $f-line-lg;
 	margin-bottom: 0;
 }
 
 h4 {
 	font-family: $f-family;
-	font-size: $f-line-md;
-	line-height: $f-line-md;
+	font-size: $f-size-lg;
+	line-height: $f-line-lg;
 	margin-bottom: 0;
 }
 
 h5 {
 	font-family: $f-family;
-	font-size: $f-line-md;
+	font-size: $f-size-md;
 	line-height: $f-line-md;
 	margin-bottom: 0;
 }
 
 h6 {
 	font-family: $f-family;
-	font-size: $f-line-md;
+	font-size: $f-size-md;
 	line-height: $f-line-md;
 	margin-bottom: 0;
 }
