--- a/projects/rilke-ui/src/lib/components/input/input.component.scss
+++ b/projects/rilke-ui/src/lib/components/input/input.component.scss
@@ -74,7 +74,7 @@ ril-input {
 	}
 
 	:host-context(ril-form-group.float) {
-		.ka-input-wrap {
+		.ril-input-wrap {
 			border-color: main-contrast(700);
 		}
 	}
