--- a/projects/rilke-ui/src/lib/components/list/list.component.html
+++ b/projects/rilke-ui/src/lib/components/list/list.component.html
@@ -2,7 +2,7 @@
 	<div #refHeader>
 		<ng-content select="ril-list-header"></ng-content>
 	</div>
-	<div #refItem class="scrollable h-100">
+	<div #refItem class="h-100">
 		<ng-content select="ril-list-item"></ng-content>
 	</div>
 </div>
