--- a/projects/rilke-ui/src/lib/components/list/list-item/list-item.component.scss
+++ b/projects/rilke-ui/src/lib/components/list/list-item/list-item.component.scss
@@ -5,6 +5,12 @@ ril-list-item {
 	align-content: center;
 	width: 100%;
 	max-height: 5rem;
+	border-radius: $r-xs;
+	background: main-palette(800);
+
+	+ ril-list-item {
+		margin-top: $m-xs;
+	}
 
 	.list-row {
 		display: flex;
@@ -20,7 +26,7 @@ ril-list-item {
 			padding: $p-md;
 		}
 
-		ka-avatar {
+		ril-avatar {
 			margin-right: 0.5rem;
 		}
 
@@ -31,22 +37,22 @@ ril-list-item {
 		}
 	}
 
-	&:nth-child(odd) {
-		background: main-palette(700);
-	}
+	// &:nth-child(odd) {
+	// 	background: main-palette(700);
+	// }
 
-	&:nth-child(even) {
-		background: main-palette(600);
-	}
+	// &:nth-child(even) {
+	// 	background: main-palette(600);
+	// }
 
-	&:first-child {
-		border-top-left-radius: 0.8rem;
-		border-top-right-radius: 0.8rem;
-	}
+	// &:first-child {
+	// 	border-top-left-radius: 0.8rem;
+	// 	border-top-right-radius: 0.8rem;
+	// }
 
 	&:last-child {
-		border-bottom-left-radius: 0.8rem;
-		border-bottom-right-radius: 0.8rem;
+		// border-bottom-left-radius: 0.8rem;
+		// border-bottom-right-radius: 0.8rem;
 		margin-bottom: 2rem;
 	}
 
