--- a/projects/rilke-ui/src/assets/style/components.scss
+++ b/projects/rilke-ui/src/assets/style/components.scss
@@ -462,6 +462,76 @@ ril-avatar {
 		}
 	}
 }
+ril-auto-complete {
+	border-radius: $r-md;
+	display: block;
+	outline: none;
+	width: 100%;
+	transition: none;
+
+	&:hover,
+	&:focus {
+		transition: none;
+	}
+
+	.ril-input {
+		border-radius: inherit;
+		transition: none;
+	}
+
+	.autocomplete-list {
+		display: none;
+		position: relative;
+		z-index: 999;
+
+		&.opened {
+			display: block;
+		}
+
+		.list-ul {
+			background: red;
+			border: 1px solid green;
+			box-shadow: $s-md;
+			border-radius: $r-md;
+			color: blue;
+			list-style-type: none;
+			left: 0;
+			margin: 0;
+			max-height: $base-size * 23;
+			overflow: auto;
+			padding: $base-size 0;
+			position: absolute;
+			top: 0;
+			width: 100%;
+			z-index: 999;
+
+			.list-li {
+				box-shadow: 0 1px 0 rgba(#000, 0.05);
+				cursor: pointer;
+				padding: math.div($base-size, 2) ($base-size * 2);
+				transition: background 0.2s ease-in-out;
+
+				.val-mark {
+					background: none;
+					color: #000;
+					pointer-events: none;
+				}
+
+				&.active {
+					background: rgba(pink, 0.05);
+				}
+
+				&:hover {
+					background: rgba(#000, 0.05);
+				}
+
+				&:last-child {
+					box-shadow: none;
+				}
+			}
+		}
+	}
+}
 ril-checkbox {
 	display: inline-flex;
 	line-height: 1;
@@ -474,7 +544,7 @@ ril-checkbox {
 
 		.ril-checkbox-handle {
 			align-items: center;
-			background: main-palette(800);
+			background: main-palette(700);
 			border-radius: math.div($r-xs, 1.5);
 			cursor: inherit;
 			display: flex;
@@ -577,6 +647,70 @@ ril-checkbox {
 		}
 	}
 }
+ril-color-picker {
+	position: relative;
+
+	.wrapper {
+		display: flex;
+		align-items: center;
+		z-index: 800;
+		cursor: pointer;
+
+		span {
+			width: 1.6rem;
+			height: 1.6rem;
+			border-radius: 4px;
+			background-color: #EAEAEA;
+			border: 1px solid main-contrast(800);
+		}
+
+		p {
+			margin-left: 0.6rem;
+			color: main-contrast(800);
+		}
+	}
+}
+
+.picker {
+	color-chrome {
+		.chrome-picker {
+			border-radius: 0 0 $r-sm $r-sm !important;
+			background-color: main-palette(900);
+			margin: $m-md 0;
+		}
+
+		.chrome-body {
+			.chrome-toggles {
+				align-self: center;
+
+				.chrome-hue {
+					margin: 0 !important;
+				}
+			}
+
+			.wrap {
+				width: 100%;
+				text-align: center;
+
+				input {
+					width: auto !important;
+					color: main-contrast(800) !important;
+					background: main-palette(700) !important;
+					border-radius: $r-sm !important;
+					box-shadow: none !important;
+				}
+
+				span {
+					display: none !important;
+				}
+			}
+		}
+
+		.chrome-toggle {
+			display: none;
+		}
+	}
+}
 ril-badge {
 	align-items: center;
 	justify-content: center;
@@ -670,140 +804,6 @@ ril-badge {
 	&.badge-dark {
 		background: main-palette(900);
 		color: main-contrast(900);
-	}
-}
-ril-auto-complete {
-	border-radius: $r-md;
-	display: block;
-	outline: none;
-	width: 100%;
-	transition: none;
-
-	&:hover,
-	&:focus {
-		transition: none;
-	}
-
-	.ka-input {
-		border-radius: inherit;
-		transition: none;
-	}
-
-	.autocomplete-list {
-		display: none;
-		position: relative;
-		z-index: 999;
-
-		&.opened {
-			display: block;
-		}
-
-		.list-ul {
-			background: red;
-			border: 1px solid green;
-			box-shadow: $s-md;
-			border-radius: $r-md;
-			color: blue;
-			list-style-type: none;
-			left: 0;
-			margin: 0;
-			max-height: $base-size * 23;
-			overflow: auto;
-			padding: $base-size 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-			z-index: 999;
-
-			.list-li {
-				box-shadow: 0 1px 0 rgba(#000, 0.05);
-				cursor: pointer;
-				padding: math.div($base-size, 2) ($base-size * 2);
-				transition: background 0.2s ease-in-out;
-
-				.val-mark {
-					background: none;
-					color: #000;
-					pointer-events: none;
-				}
-
-				&.active {
-					background: rgba(pink, 0.05);
-				}
-
-				&:hover {
-					background: rgba(#000, 0.05);
-				}
-
-				&:last-child {
-					box-shadow: none;
-				}
-			}
-		}
-	}
-}
-ril-color-picker {
-	position: relative;
-
-	.wrapper {
-		display: flex;
-		align-items: center;
-		z-index: 800;
-		cursor: pointer;
-
-		span {
-			width: 1.6rem;
-			height: 1.6rem;
-			border-radius: 4px;
-			background-color: #EAEAEA;
-			border: 1px solid main-contrast(800);
-		}
-
-		p {
-			margin-left: 0.6rem;
-			color: main-contrast(800);
-		}
-	}
-}
-
-.picker {
-	color-chrome {
-		.chrome-picker {
-			border-radius: 0 0 $r-sm $r-sm !important;
-			background-color: main-palette(900);
-			margin: $m-md 0;
-		}
-
-		.chrome-body {
-			.chrome-toggles {
-				align-self: center;
-
-				.chrome-hue {
-					margin: 0 !important;
-				}
-			}
-
-			.wrap {
-				width: 100%;
-				text-align: center;
-
-				input {
-					width: auto !important;
-					color: main-contrast(800) !important;
-					background: main-palette(700) !important;
-					border-radius: $r-sm !important;
-					box-shadow: none !important;
-				}
-
-				span {
-					display: none !important;
-				}
-			}
-		}
-
-		.chrome-toggle {
-			display: none;
-		}
 	}
 }
 ril-card {
@@ -1022,17 +1022,6 @@ ril-dialog {
 	background: main-palette(900) !important;
 	border-radius: $r-md !important;
 }
-ril-expansion-panel {
-	.mat-expansion-panel {
-		background: main-palette(800);
-		box-shadow: $s-md;
-		border-radius: $r-md;
-
-		.mat-expansion-indicator::after {
-			color: main-contrast(700) !important;
-		}
-	}
-}
 ril-file-upload {
 	.wrapper {
 		display: flex;
@@ -1098,9 +1087,20 @@ ril-file-upload {
 		}
 	}
 }
+ril-expansion-panel {
+	.mat-expansion-panel {
+		background: main-palette(800);
+		box-shadow: $s-md;
+		border-radius: $r-md;
+
+		.mat-expansion-indicator::after {
+			color: main-contrast(700) !important;
+		}
+	}
+}
 ril-form-group {
 	display: block;
-	margin: 0 0 ($base-size * 3);
+	margin: 0 0 ($base-size * 2);
 	height: min-content;
 
 	&.float {
@@ -1146,6 +1146,16 @@ ril-form-group {
 				}
 			}
 		}
+	}
+}
+ril-form-description {
+	display: block;
+	position: absolute;
+	font-size: $f-size-sm;
+	margin-top: 1px;
+
+	.error {
+		color: $error-color;
 	}
 }
 ril-form-label {
@@ -1234,7 +1244,7 @@ ril-input {
 	}
 
 	:host-context(ril-form-group.float) {
-		.ka-input-wrap {
+		.ril-input-wrap {
 			border-color: main-contrast(700);
 		}
 	}
@@ -1319,7 +1329,7 @@ ril-list {
 				display: flex;
 			}
 
-			*[ka-skeleton] {
+			*[ril-skeleton] {
 				opacity: 100%;
 				visibility: visible;
 			}
@@ -1430,7 +1440,7 @@ ril-list {
 				width: 100%;
 				min-height: 5rem;
 
-				ka-avatar {
+				ril-avatar {
 					margin-right: 0.5rem;
 				}
 			}
@@ -1612,30 +1622,6 @@ ril-progress-spinner {
 	p {
 		font-weight: 700;
 		margin-top: 1rem;
-	}
-}
-ril-range-slider {
-	display: flex;
-	width: 100%;
-
-	mat-slider {
-		width: 100%;
-		padding-left: 0;
-		padding-right: 0;
-	}
-
-	.mat-accent .mat-slider-track-fill,
-	.mat-accent .mat-slider-thumb,
-	.mat-accent .mat-slider-thumb-label {
-		background-color: main-palette(800);
-	}
-
-	.mat-accent .mat-slider-thumb-label-text {
-		color: $success-color;
-	}
-
-	.mat-slider-track-background {
-		background-color: main-palette(600);
 	}
 }
 ril-select {
@@ -1910,6 +1896,30 @@ ril-tabs {
 		}
 	}
 }
+ril-range-slider {
+	display: flex;
+	width: 100%;
+
+	mat-slider {
+		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+	.mat-accent .mat-slider-track-fill,
+	.mat-accent .mat-slider-thumb,
+	.mat-accent .mat-slider-thumb-label {
+		background-color: main-palette(800);
+	}
+
+	.mat-accent .mat-slider-thumb-label-text {
+		color: $success-color;
+	}
+
+	.mat-slider-track-background {
+		background-color: main-palette(600);
+	}
+}
 ril-card-content {
 	font-size: $f-size-md;
 	color: main-contrast(500);
@@ -1917,27 +1927,6 @@ ril-card-content {
 	p {
 		font-size: $f-size-md;
 		color: main-contrast(500);
-	}
-}
-ril-card-image {
-	margin-left: -$p-md;
-	margin-right: -$p-md;
-	margin-top: -$p-md;
-	margin-bottom: $m-md;
-	padding-top: 56.25%;
-	width: calc(100% + 2 * $p-md);
-	border-top-left-radius: $r-md;
-	border-top-right-radius: $r-md;
-	position: relative;
-	overflow: hidden;
-
-	img {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		object-position: center;
 	}
 }
 ril-text-area {
@@ -2075,6 +2064,27 @@ ril-text-area {
 		}
 	}
 }
+ril-card-image {
+	margin-left: -$p-md;
+	margin-right: -$p-md;
+	margin-top: -$p-md;
+	margin-bottom: $m-md;
+	padding-top: 56.25%;
+	width: calc(100% + 2 * $p-md);
+	border-top-left-radius: $r-md;
+	border-top-right-radius: $r-md;
+	position: relative;
+	overflow: hidden;
+
+	img {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+	}
+}
 ril-card-title {
 	font-size: $f-size-lg;
 	color: main-contrast(800);
@@ -2103,7 +2113,6 @@ ril-list-header {
 	align-items: center;
 	justify-content: space-between;
 	border-radius: 0.3rem;
-	margin-bottom: 0.5rem;
 
 	.list-check {
 		cursor: pointer;
@@ -2118,6 +2127,12 @@ ril-list-item {
 	align-content: center;
 	width: 100%;
 	max-height: 5rem;
+	border-radius: $r-xs;
+	background: main-palette(800);
+
+	+ ril-list-item {
+		margin-top: $m-xs;
+	}
 
 	.list-row {
 		display: flex;
@@ -2133,7 +2148,7 @@ ril-list-item {
 			padding: $p-md;
 		}
 
-		ka-avatar {
+		ril-avatar {
 			margin-right: 0.5rem;
 		}
 
@@ -2144,22 +2159,22 @@ ril-list-item {
 		}
 	}
 
-	&:nth-child(odd) {
-		background: main-palette(700);
-	}
+	// &:nth-child(odd) {
+	// 	background: main-palette(700);
+	// }
 
-	&:nth-child(even) {
-		background: main-palette(600);
-	}
+	// &:nth-child(even) {
+	// 	background: main-palette(600);
+	// }
 
-	&:first-child {
-		border-top-left-radius: 0.8rem;
-		border-top-right-radius: 0.8rem;
-	}
+	// &:first-child {
+	// 	border-top-left-radius: 0.8rem;
+	// 	border-top-right-radius: 0.8rem;
+	// }
 
 	&:last-child {
-		border-bottom-left-radius: 0.8rem;
-		border-bottom-right-radius: 0.8rem;
+		// border-bottom-left-radius: 0.8rem;
+		// border-bottom-right-radius: 0.8rem;
 		margin-bottom: 2rem;
 	}
 
