--- a/projects/rilke-ui/src/lib/components/alert/alert.component.scss
+++ b/projects/rilke-ui/src/lib/components/alert/alert.component.scss
@@ -62,4 +62,5 @@ snack-bar-container {
 	background: transparent !important;
 	padding: 0 !important;
 	overflow: hidden !important;
+	box-shadow: $s-md;
 }
