--- a/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.html
+++ b/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.html
@@ -1,27 +1,28 @@
 <div class="wrapper">
-	<div class="uploadBtn" (click)="fileInput.click()">
-		<P *ngIf="!file">Dosya Seç</P>
-		<img *ngIf="file && isImage" [src]="file.base64" alt="" />
-		<span *ngIf="file && !isImage" class="file-icon material-icons"
+	<div class="upload-btn" (click)="!disabled ? fileInput.click() : ''">
+		<P *ngIf="!value">{{ lang.common.select_file }}</P>
+		<img *ngIf="value && isImage" [src]="value.base64" alt="" />
+		<span *ngIf="value && !isImage" class="file-icon material-icons"
 			>insert_drive_file</span
 		>
-		<P class="fileName" *ngIf="file">{{ file.name }}</P>
-		<span *ngIf="!file" class="upload-icon material-icons"
+		<P class="file-name" ril-truncate *ngIf="value">{{ value.name }}</P>
+		<span *ngIf="!value" class="upload-icon material-icons"
 			>file_upload</span
 		>
-		<span
-			stop-propagation
-			*ngIf="file"
-			class="close-icon material-icons"
-			(click)="cancelFile()"
-			>cancel</span
-		>
+		<div class="close-icon">
+			<span
+				stop-propagation
+				*ngIf="value"
+				class="material-icons"
+				(click)="cancelFile()"
+				>cancel</span>
+		</div>
 
 		<input
 			type="file"
 			(change)="onFileChanged($event)"
+			[required]="required ? true : false"
 			#fileInput
-			multiple
 			hidden
 		/>
 	</div>
