--- a/projects/rilke-ui/src/lib/components/list/list-toolbar/list-toolbar.component.html
+++ b/projects/rilke-ui/src/lib/components/list/list-toolbar/list-toolbar.component.html
@@ -1,7 +1,7 @@
 <div class="left">
 	<span class="icon material-icons" (click)="closeWindow(true)">close</span>
 	<span class="quantity">{{ options.selected }}</span>
-	<span class="text">{{ options.text_selected }}</span>
+	<span class="text">{{ options.text_selected ? options.text_selected : lang.common.text_selected }}</span>
 </div>
 <div *ngIf="options.buttons && options.buttons.length" class="right">
 	<button
