--- a/projects/rilke-ui/src/lib/components/file-drop/file-drop.component.html
+++ b/projects/rilke-ui/src/lib/components/file-drop/file-drop.component.html
@@ -12,6 +12,7 @@
 		type="file"
 		(change)="onFileChanged($event)"
 		[required]="required ? true : false"
+		[multiple]="multiple ? true : false"
 		#fileInput
 		hidden
 	/>
