--- a/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.html
+++ b/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.html
@@ -1,15 +1,14 @@
 <div class="wrapper">
 	<div class="upload-btn" (click)="!disabled ? fileInput.click() : ''">
-		<P *ngIf="!value">{{ lang.common.select_file }}</P>
+		<ng-container *ngIf="!value">
+			<span class="upload-icon material-icons">file_upload</span>
+			<p>{{ lang.common.select_file }}</p>
+		</ng-container>
+
 		<img *ngIf="value && isImage" [src]="value.base64" alt="" />
-		<span *ngIf="value && !isImage" class="file-icon material-icons"
-			>insert_drive_file</span
-		>
+		<span *ngIf="value && !isImage" class="file-icon material-icons">insert_drive_file</span>
 		<P class="file-name" ril-truncate *ngIf="value">{{ value.name }}</P>
-		<span *ngIf="!value" class="upload-icon material-icons"
-			>file_upload</span
-		>
-		<div class="close-icon">
+		<div class="close-icon" *ngIf="value">
 			<span
 				stop-propagation
 				*ngIf="value"
