--- a/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.scss
+++ b/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.scss
@@ -6,7 +6,7 @@ ril-file-upload {
 		.upload-btn {
 			background-color: main-palette(800);
 			border-radius: $r-md;
-			padding: 1rem;
+			padding: $p-sm;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -16,8 +16,8 @@ ril-file-upload {
 			position: relative;
 
 			img {
-				width: 3rem;
-				height: 3rem;
+				width: 2rem;
+				height: 2rem;
 				position: absolute;
 				left: 0.2rem;
 				border-radius: $r-md;
@@ -25,8 +25,8 @@ ril-file-upload {
 			}
 
 			.file-icon {
-				width: 3rem;
-				height: 3rem;
+				width: 2rem;
+				height: 2rem;
 				background-color: main-palette(700);
 				font-size: 2.4rem;
 				position: absolute;
@@ -46,12 +46,13 @@ ril-file-upload {
 
 			.file-name {
 				margin: 0;
-				margin-left: 3rem !important;
+				margin-left: 2rem !important;
 			}
 
 			.upload-icon {
-				font-size: 1.4rem;
-				margin-left: 0.5rem;
+				font-size: 1rem;
+				scale: 1.3;
+				margin-right: 0.5rem;
 				color: main-contrast(800);
 			}
 
@@ -59,10 +60,14 @@ ril-file-upload {
 				display: flex;
 				justify-content: flex-end;
 				align-items: center;
-				font-size: 1.4rem;
 				margin-left: 0.5rem;
 				color: $error-color;
 				flex: 2;
+
+				span {
+					font-size: 1rem;
+					scale: 1.5;
+				}
 			}
 		}
 	}
